--- a/assets/style/mobile.scss
+++ b/assets/style/mobile.scss
@@ -4,162 +4,7 @@ $fontColor: rgba(171, 145, 120, 1);
     font-size: 40%;
 }
 body{
-    header{
-        height: 15rem;
-        width: 100%;
-        display: flex;
-        position: fixed;
-        top: 0;
-        z-index: 100;
-        #logo-header{
-            padding: .5rem 0;
-            width: 70%;
-            img{
-                width: 35rem;
-                height: 100%;
-                float: left;
-            }
-
-        }
-        .main-nav{
-            display: none;
-        }
-        .burger{
-            width: 7rem;
-            height: 10rem;
-            margin: 2.5rem auto;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            position: relative;
-            .burger-line{
-                width: 7rem;
-                height: 2px;
-                content: "";
-                margin: 1rem auto;
-                background-color: $fontColor;
-            }
-            #line1{
-                -webkit-animation: line1-animation 100ms linear;
-                -moz-animation: line1-animation 100ms linear;
-                -ms-animation: line1-animation 100ms linear;
-                -o-animation: line1-animation 100ms linear;
-                animation: line1-animation 100ms linear;
-            }
-            #line2{
-                opacity: 1;
-                -webkit-transition: transform 300ms linear, opacity 300ms linear;
-                -moz-transition: transform 300ms linear, opacity 300ms linear;
-                -ms-transition: transform 300ms linear, opacity 300ms linear;
-                -o-transition: transform 300ms linear, opacity 300ms linear;
-                transition: transform 300ms linear, opacity 300ms linear;
-            }
-            #line3{
-                -webkit-animation: line3-animation 100ms linear;
-                -moz-animation: line3-animation 100ms linear;
-                -ms-animation: line3-animation 100ms linear;
-                -o-animation: line3-animation 100ms linear;
-                animation: line3-animation 100ms linear;
-            }
-        }
-        .burger.active{
-            -webkit-transform: rotate(180deg);
-            -moz-transform: rotate(180deg);
-            -ms-transform: rotate(180deg);
-            -o-transform: rotate(180deg);
-            transform: rotate(180deg);
-            -webkit-transition: transform 500ms linear;
-            -moz-transition: transform 500ms linear;
-            -ms-transition: transform 500ms linear;
-            -o-transition: transform 500ms linear;
-            transition: transform 500ms linear;
-            #line1{
-                position: absolute;
-                -webkit-transform: rotate(45deg);
-                -moz-transform: rotate(45deg);
-                -ms-transform: rotate(45deg);
-                -o-transform: rotate(45deg);
-                transform: rotate(45deg);
-                -webkit-animation: burger-line1-animation-active 100ms linear;
-                -moz-animation: burger-line1-animation-active 100ms linear;
-                -ms-animation: burger-line1-animation-active 100ms linear;
-                -o-animation: burger-line1-animation-active 100ms linear;
-                animation: burger-line1-animation-active 100ms linear;
-            }
-            #line2{
-                -webkit-transform: translateX(-1.2vw);
-                -moz-transform: translateX(-1.2vw);
-                -ms-transform: translateX(-1.2vw);
-                -o-transform: translateX(-1.2vw);
-                transform: translateX(-1.2vw);
-                opacity: 0;
-                -webkit-transition: transform 300ms linear, opacity 300ms linear;
-                -moz-transition: transform 300ms linear, opacity 300ms linear;
-                -ms-transition: transform 300ms linear, opacity 300ms linear;
-                -o-transition: transform 300ms linear, opacity 300ms linear;
-                transition: transform 300ms linear, opacity 300ms linear;
-            }
-            #line3{
-                position: absolute;
-                -webkit-transform: rotate(-45deg);
-                -moz-transform: rotate(-45deg);
-                -ms-transform: rotate(-45deg);
-                -o-transform: rotate(-45deg);
-                transform: rotate(-45deg);
-                -webkit-animation: burger-line3-animation-active 100ms linear;
-                -moz-animation: burger-line3-animation-active 100ms linear;
-                -ms-animation: burger-line3-animation-active 100ms linear;
-                -o-animation: burger-line3-animation-active 100ms linear;
-                animation: burger-line3-animation-active 100ms linear;
-            }
-        }
-        .mobile-nav{
-            display: block;
-            position: absolute;
-            top: 15rem;
-            left: 0;
-            width: 100%;
-            background-color:rgba(171, 145, 120, .8);
-            -webkit-transform: translateX(150%);
-            -moz-transform: translateX(150%);
-            -ms-transform: translateX(150%);
-            -o-transform: translateX(150%);
-            transform: translateX(150%);
-            -webkit-transition: transform 300ms linear;
-            -moz-transition: transform 300ms linear;
-            -ms-transition: transform 300ms linear;
-            -o-transition: transform 300ms linear;
-            transition: transform 300ms linear;
-            ul{
-                width: 100%;
-                padding: 3rem 0;
-                li{
-                    display: block;
-                    width: 90%;
-                    margin: 2rem auto;
-                    a{
-                        font-size: 3rem;
-                        font-weight: 500;
-                        color: $mainColor;
-                    }
-                }
-            }
-        }
-        .mobile-nav.active{
-            animation: mobile-nav-animation 2s linear;
-            -webkit-transform: translateX(0);
-            -moz-transform: translateX(0);
-            -ms-transform: translateX(0);
-            -o-transform: translateX(0);
-            transform: translateX(0);
-            -webkit-transition: transform 300ms linear;
-            -moz-transition: transform 300ms linear;
-            -ms-transition: transform 300ms linear;
-            -o-transition: transform 300ms linear;
-            transition: transform 300ms linear;
-        }
-    }
+    @import "partials/header_mobile";
     .main-wrapper{
         padding-top: 15rem;
         #home-page-wrapper{
