--- a/assets/style/tablets.scss
+++ b/assets/style/tablets.scss
@@ -14,7 +14,7 @@ body{
         }
     }
     .main-wrapper{
-        #home-page-wrapper{
+        /* #home-page-wrapper{
             #hp-welcome-message{
                 width: 50%;
                 h1,h2{
@@ -25,12 +25,15 @@ body{
             #hp-welcome-image{
                 width: 45%;
             }
-        }
+        } */
         #about-us-page-wrapper{
-            .container{
-                .about-us-pic, .about-us-text{
-                    width: 48%;
-                    margin: 0 1%;
+            .about-us-page-content{
+                .container{
+                    width: 95%;
+                    .about-us-pic, .about-us-text{
+                        width: 48%;
+                        margin: 0 1%;
+                    }
                 }
             }
         }
