Changed aboput us page width in small desktop screen display

--- a/assets/style/desktop-small.css
+++ b/assets/style/desktop-small.css
@@ -1,7 +1,9 @@
-body .main-wrapper #about-us-page-wrapper .container .about-us-text {
-  padding: 15px; }
-body .main-wrapper #about-us-page-wrapper .container .about-us-pic {
-  width: 45rem;
-  height: 70rem; }
+body .main-wrapper #about-us-page-wrapper .about-us-page-content .container {
+  width: 95%; }
+  body .main-wrapper #about-us-page-wrapper .about-us-page-content .container .about-us-text {
+    padding: 15px; }
+  body .main-wrapper #about-us-page-wrapper .about-us-page-content .container .about-us-pic {
+    width: 45rem;
+    height: 70rem; }
 
 /*# sourceMappingURL=desktop-small.css.map */
