--- a/assets/style/partials/_carousel.scss
+++ b/assets/style/partials/_carousel.scss
@@ -26,6 +26,7 @@
             opacity: 1;
             background-size: cover;
             background-repeat: no-repeat;
+            background-position: center;
             -webkit-transition: transform 200ms linear;
             -moz-transition: transform 200ms linear;
             -ms-transition: transform 200ms linear;
