--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -88,7 +88,7 @@ body{
                 width: 100%;
                 height: 90rem;
                 opacity: 0;
-                background-image: url("../img/home_page_pic.png");
+                background-image: url("../img/home_page_pic.jpg");
                 background-size: cover;
                 background-position: center; 
             }
@@ -127,7 +127,7 @@ body{
         /*--------HOME PAGE END----------*/
         #about-us-page-wrapper{
             position: relative;
-            background-image: url("../img/about_us_background.png");
+            background-image: url("../img/about_us_background.jpg");
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
